refactor: :recycle: Update app structure
